@@ -1,5 +1,7 @@
 Libs 0.2.4.1038:
 A new version of MediaInfo(Wrapper) (0.7.4.4) which works on Vista. Thanks to moadib2k and the MediaInfo team for getting this to work.
+Data 0.2.3.1038:
+Corrected threads information for x264config. Thanks to check for this.
 
 0.2.4.1038
 Commit by berrinam:
